[package]
name = "blake3-proof-of-work"
description = "A basic proof of work scheme using the blake3 hash function"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
keywords = ["crypto", "proof-of-work", "cryptography"]
categories = ["cryptography"]
repository = "https://github.com/samuelSchlesinger/proof-of-work"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.blake3]
version = "1.3.0"

[dependencies.rand]
version = "0.8.4"

[dependencies.num_cpus]
version = "1.13.1"
